--- a/styles.css
+++ b/styles.css
@@ -1,111 +1,164 @@
-/*
-Challenge:
-Change the site's background into a gradient that goes
-from blue at the top to pink at the bottom.
-*/
+body{
 
-body {
+   
+    font-family: happy Monkey;
     text-align: center;
-    font-family: 'Happy Monkey', cursive;
-    background: linear-gradient(#a2d2ff, #EFB0C9);
+    background:linear-gradient(#a2d2ff,#EFB0C9);
     color: #ffffff;
+   
 }
 
-h1, h2, h3, h4, p {
-    text-shadow: 0 0 1px black;
+h1,h2,h4,h3,p{
+
+    text-shadow: 0px 0 1px black;
+
 }
 
-#bff-img {
-    width: 150px;
-    border-radius: 50%;
-    border: 6px solid #EFB0C9;
-    margin-bottom: 10px;
+#img-profile{
+
+       width: 150px;
+       border-radius: 50%;
+       border: 6px solid #EFB0C9;
+
+      }
+
+
+      #bday-age{
+
+        background: #EFB0C9;
+        margin-bottom: 6px;
+        margin-top: 10px;
+        padding: 4px 8px;
+        border-radius: 6px;
+
+      }
+      
+      
+      #bday-date{
+
+        background: #EFB0C9;
+        margin:0  auto 0 auto;
+        padding: 4px 8px;
+        border-radius: 6px;
+        
+      }
+
+#header{
+
+  display: flex;
+ 
+  /* vertical*/
+  align-items:center ;
+
+  flex-direction: column;
+
 }
 
-#bday-age {
-    background: #EFB0C9;
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin: 5px 0 10px 0;
+.img-gift{
+
+  width: 400px;
+  border: 4px solid white;
+  border-radius: 8px;
+  height: 400px;
+  background-image: url("images/gift-cover.jpg");
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#bday-date {
-    margin: 0;
-    background: #EFB0C9;
-    padding: 5px 10px;
-    border-radius: 5px;
+
+.img-gift-next{
+
+  width: 400px;
+  border: 4px solid white;
+  border-radius: 8px;
+  height: 400px;
+  background-image: url("images/gift-cover.jpg");
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+}
+.img-gift-sheer{
+
+
+  width: 400px;
+  border: 4px solid white;
+  border-radius: 8px;
+  height: 200px;
+  background-image: url("images/gift-cover.jpg");
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+
 }
 
-#header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#footer{
+
+  font-style: italic;
+ margin: 40px auto 20px auto;
+
 }
 
-.gift-section {
-    margin-top: 50px;
+#a-link{
+
+  color: white;
 }
 
-.gift-title {
-    margin-bottom: 10px;
+
+
+.img-gift:hover{
+
+  background-image: url("images/happy.gif");
+}
+.img-gift-next:hover{
+
+  background-image: url("images/hot.gif");
 }
 
-.gift-hint {
-    margin-top: 0;
+#img-genius:hover{
+
+  background-image: url("images/genius.gif");
 }
 
-#gift-img-cheers {
-    height: 200px;
+#img-badass:hover{
+
+  background-image: url("images/badass.gif");
 }
 
-.gift-img {
-    margin: 20px auto;
-    max-width: 400px;
-    height: 400px;
-    border: 6px solid white;
-    border-radius: 10px;
-    background-image: url("images/gift-cover.jpg");
-    background-size: cover;
+#img-sheer:hover{
+  background-image: url("images/cheers.gif");
+
 }
 
-#gift-img-happy:hover {
-    background-image: url("images/happy.gif");
+
+
+
+#gift-section{
+
+  margin-top: 50px;
 }
 
-#gift-img-hot:hover {
-    background-image: url("images/hot.gif");
+
+#gift-section-last{
+
+  margin-top: 50px;
+}
+#gift-section-next{
+
+  margin-top: 50px;
 }
 
-#gift-img-genius:hover {
-    background-image: url("images/genius.gif");
+#h3-gift{
+
+  margin-top: 6px;
+
 }
 
-#gift-img-badass:hover {
-    background-image: url("images/badass.gif");
+
+#h2-gift{
+
+  margin-bottom: 6px;
+  
 }
-
-#gift-img-cheers:hover {
-    background-image: url("images/cheers.gif");
-}
-
-#footer {
-    font-style: italic;
-    width: 400px;
-    margin: 40px auto 20px;
-}
-
-a {
-    color: white;
-}
-
-/* 
-Add the footer paragraph according to the design. 
-Configure the anchor tag to open the link in a new tab.
-Forgotten how to do it? Google it! 
-
-Link: 
-https://scrimba.com/learn/htmlandcss
-
-Text:
-Want to create your own Birthday GIFt site? Take this HTML & CSS course.
-*/
